assignment1/assignment1/target/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'readInteger()'", "'readFloat()'", "'readBoolean()'", 
                     "'readString()'", "'printInteger'", "'printFloat'", 
                     "'printBoolean'", "'printString'", "'super'", "'preventDefault()'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "'.'", "';'", 
                     "','", "':'", "'array'", "'auto'", "'break'", "'boolean'", 
                     "'do'", "'else'", "'float'", "'for'", "'function'", 
                     "'if'", "'integer'", "'return'", "'string'", "'void'", 
                     "'while'", "'out'", "'continue'", "'of'", "'inherit'", 
                     "'-'", "'+'", "'*'", "'/'", "'%'", "'::'", "'!'", "'&&'", 
                     "'||'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
                     "'='", "<INVALID>", "<INVALID>", "<INVALID>", "'true'", 
                     "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "LB", "RB", 
                      "LP", "RP", "LSB", "RSB", "DOT", "SEMI", "COMMA", 
                      "COLON", "ARRAY", "AUTO", "BREAK", "BOOLEAN", "DO", 
                      "ELSE", "FLOAT", "FOR", "FUNCTION", "IF", "INTEGER", 
                      "RETURN", "STRING", "VOID", "WHILE", "OUT", "CONTINUE", 
                      "OF", "INHERIT", "SUB", "ADD", "MUL", "DIV", "MOD", 
                      "CONCATE", "NOT", "AND", "OR", "EQ", "NEQ", "LT", 
                      "GT", "LEQ", "GEQ", "ASSIGN", "INTLIT", "FLOATIT", 
                      "BOOLIT", "TRUE", "FALSE", "STRINGLIT", "ID", "CMT", 
                      "BLOCKCMT", "WS", "ILLEGAL_ESCAPE", "UNCLOSED_STRING", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decls = 1
    RULE_decl = 2
    RULE_vardecl = 3
    RULE_vardecl_no_assign = 4
    RULE_vardecl_assign = 5
    RULE_funcdecl = 6
    RULE_funcprototype = 7
    RULE_functype = 8
    RULE_funcbody = 9
    RULE_paramlist = 10
    RULE_paramdecl = 11
    RULE_stmts = 12
    RULE_stmt = 13
    RULE_specialfunc_r = 14
    RULE_specialfunc_c = 15
    RULE_assignstmt = 16
    RULE_idlist = 17
    RULE_lhs = 18
    RULE_ifstmt = 19
    RULE_forstmt = 20
    RULE_scalarvar = 21
    RULE_intexpr = 22
    RULE_condexpr = 23
    RULE_updateexpr = 24
    RULE_whilestmt = 25
    RULE_dowhilestmt = 26
    RULE_breakstmt = 27
    RULE_continuestmt = 28
    RULE_returnstmt = 29
    RULE_callstmt = 30
    RULE_blockstmt = 31
    RULE_arraytype = 32
    RULE_arraylit = 33
    RULE_arrayidx = 34
    RULE_intlist = 35
    RULE_exprlist = 36
    RULE_expr = 37
    RULE_exp1 = 38
    RULE_exp2 = 39
    RULE_exp3 = 40
    RULE_exp4 = 41
    RULE_exp5 = 42
    RULE_exp6 = 43
    RULE_exp7 = 44
    RULE_exp = 45
    RULE_funccall = 46
    RULE_primtype = 47

    ruleNames =  [ "program", "decls", "decl", "vardecl", "vardecl_no_assign", 
                   "vardecl_assign", "funcdecl", "funcprototype", "functype", 
                   "funcbody", "paramlist", "paramdecl", "stmts", "stmt", 
                   "specialfunc_r", "specialfunc_c", "assignstmt", "idlist", 
                   "lhs", "ifstmt", "forstmt", "scalarvar", "intexpr", "condexpr", 
                   "updateexpr", "whilestmt", "dowhilestmt", "breakstmt", 
                   "continuestmt", "returnstmt", "callstmt", "blockstmt", 
                   "arraytype", "arraylit", "arrayidx", "intlist", "exprlist", 
                   "expr", "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", 
                   "exp7", "exp", "funccall", "primtype" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    LB=11
    RB=12
    LP=13
    RP=14
    LSB=15
    RSB=16
    DOT=17
    SEMI=18
    COMMA=19
    COLON=20
    ARRAY=21
    AUTO=22
    BREAK=23
    BOOLEAN=24
    DO=25
    ELSE=26
    FLOAT=27
    FOR=28
    FUNCTION=29
    IF=30
    INTEGER=31
    RETURN=32
    STRING=33
    VOID=34
    WHILE=35
    OUT=36
    CONTINUE=37
    OF=38
    INHERIT=39
    SUB=40
    ADD=41
    MUL=42
    DIV=43
    MOD=44
    CONCATE=45
    NOT=46
    AND=47
    OR=48
    EQ=49
    NEQ=50
    LT=51
    GT=52
    LEQ=53
    GEQ=54
    ASSIGN=55
    INTLIT=56
    FLOATIT=57
    BOOLIT=58
    TRUE=59
    FALSE=60
    STRINGLIT=61
    ID=62
    CMT=63
    BLOCKCMT=64
    WS=65
    ILLEGAL_ESCAPE=66
    UNCLOSED_STRING=67
    ERROR_CHAR=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decls(self):
            return self.getTypedRuleContext(MT22Parser.DeclsContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.decls(0)
            self.state = 97
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def decls(self):
            return self.getTypedRuleContext(MT22Parser.DeclsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecls" ):
                return visitor.visitDecls(self)
            else:
                return visitor.visitChildren(self)



    def decls(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MT22Parser.DeclsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_decls, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.decl()
            self._ctx.stop = self._input.LT(-1)
            self.state = 106
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MT22Parser.DeclsContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_decls)
                    self.state = 102
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 103
                    self.decl() 
                self.state = 108
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def vardecl_assign(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl_assignContext,0)


        def vardecl_no_assign(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl_no_assignContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 113
                self.vardecl_assign()
                pass

            elif la_ == 2:
                self.state = 114
                self.vardecl_no_assign()
                pass


            self.state = 117
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_no_assignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def primtype(self):
            return self.getTypedRuleContext(MT22Parser.PrimtypeContext,0)


        def arraytype(self):
            return self.getTypedRuleContext(MT22Parser.ArraytypeContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl_no_assign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl_no_assign" ):
                return visitor.visitVardecl_no_assign(self)
            else:
                return visitor.visitChildren(self)




    def vardecl_no_assign(self):

        localctx = MT22Parser.Vardecl_no_assignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardecl_no_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.idlist()
            self.state = 120
            self.match(MT22Parser.COLON)
            self.state = 124
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.state = 121
                self.primtype()
                pass
            elif token in [MT22Parser.ARRAY]:
                self.state = 122
                self.arraytype()
                pass
            elif token in [MT22Parser.AUTO]:
                self.state = 123
                self.match(MT22Parser.AUTO)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_assignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def vardecl_assign(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl_assignContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def primtype(self):
            return self.getTypedRuleContext(MT22Parser.PrimtypeContext,0)


        def arraytype(self):
            return self.getTypedRuleContext(MT22Parser.ArraytypeContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl_assign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl_assign" ):
                return visitor.visitVardecl_assign(self)
            else:
                return visitor.visitChildren(self)




    def vardecl_assign(self):

        localctx = MT22Parser.Vardecl_assignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vardecl_assign)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.match(MT22Parser.ID)
                self.state = 127
                self.match(MT22Parser.COMMA)
                self.state = 128
                self.vardecl_assign()
                self.state = 129
                self.match(MT22Parser.COMMA)
                self.state = 130
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.match(MT22Parser.ID)
                self.state = 133
                self.match(MT22Parser.COLON)
                self.state = 137
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                    self.state = 134
                    self.primtype()
                    pass
                elif token in [MT22Parser.ARRAY]:
                    self.state = 135
                    self.arraytype()
                    pass
                elif token in [MT22Parser.AUTO]:
                    self.state = 136
                    self.match(MT22Parser.AUTO)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 139
                self.match(MT22Parser.ASSIGN)
                self.state = 140
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcprototype(self):
            return self.getTypedRuleContext(MT22Parser.FuncprototypeContext,0)


        def funcbody(self):
            return self.getTypedRuleContext(MT22Parser.FuncbodyContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = MT22Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.funcprototype()
            self.state = 144
            self.funcbody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncprototypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.ID)
            else:
                return self.getToken(MT22Parser.ID, i)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def functype(self):
            return self.getTypedRuleContext(MT22Parser.FunctypeContext,0)


        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def paramlist(self):
            return self.getTypedRuleContext(MT22Parser.ParamlistContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_funcprototype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncprototype" ):
                return visitor.visitFuncprototype(self)
            else:
                return visitor.visitChildren(self)




    def funcprototype(self):

        localctx = MT22Parser.FuncprototypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funcprototype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(MT22Parser.ID)
            self.state = 147
            self.match(MT22Parser.COLON)
            self.state = 148
            self.match(MT22Parser.FUNCTION)
            self.state = 149
            self.functype()
            self.state = 150
            self.match(MT22Parser.LB)
            self.state = 151
            self.paramlist(0)
            self.state = 152
            self.match(MT22Parser.RB)
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 153
                self.match(MT22Parser.INHERIT)
                self.state = 154
                self.match(MT22Parser.ID)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primtype(self):
            return self.getTypedRuleContext(MT22Parser.PrimtypeContext,0)


        def arraytype(self):
            return self.getTypedRuleContext(MT22Parser.ArraytypeContext,0)


        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_functype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctype" ):
                return visitor.visitFunctype(self)
            else:
                return visitor.visitChildren(self)




    def functype(self):

        localctx = MT22Parser.FunctypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_functype)
        try:
            self.state = 161
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.primtype()
                pass
            elif token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 158
                self.arraytype()
                pass
            elif token in [MT22Parser.VOID]:
                self.enterOuterAlt(localctx, 3)
                self.state = 159
                self.match(MT22Parser.VOID)
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 4)
                self.state = 160
                self.match(MT22Parser.AUTO)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncbodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockstmt(self):
            return self.getTypedRuleContext(MT22Parser.BlockstmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_funcbody

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncbody" ):
                return visitor.visitFuncbody(self)
            else:
                return visitor.visitChildren(self)




    def funcbody(self):

        localctx = MT22Parser.FuncbodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_funcbody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.blockstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramdecl(self):
            return self.getTypedRuleContext(MT22Parser.ParamdeclContext,0)


        def paramlist(self):
            return self.getTypedRuleContext(MT22Parser.ParamlistContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_paramlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamlist" ):
                return visitor.visitParamlist(self)
            else:
                return visitor.visitChildren(self)



    def paramlist(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MT22Parser.ParamlistContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_paramlist, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 166
                self.paramdecl()
                pass

            elif la_ == 2:
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 175
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MT22Parser.ParamlistContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_paramlist)
                    self.state = 170
                    if not self.precpred(self._ctx, 3):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                    self.state = 171
                    self.match(MT22Parser.COMMA)
                    self.state = 172
                    self.paramdecl() 
                self.state = 177
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ParamdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def primtype(self):
            return self.getTypedRuleContext(MT22Parser.PrimtypeContext,0)


        def arraytype(self):
            return self.getTypedRuleContext(MT22Parser.ArraytypeContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_paramdecl
